fix: prismjs whitespace

--- a/docs.css
+++ b/docs.css
@@ -1,3 +1,10 @@
+.container {
+  width: 80%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .header {
   margin-top: 6rem;
   text-align: center;
@@ -18,17 +25,23 @@
 
 .docs-example {
   margin-top: 4rem;
+  margin-bottom: 2rem;
 }
 
 .code-example {
   border-left: 4px solid #ccc;
 }
 
-pre,
+pre {
+  font-family: monospace;
+  font-size: 90%;
+  white-space: nowrap;
+}
+
 .inline-code {
   padding: .2rem .5rem;
   margin: 0 .2rem;
-  font-family: monospace, monospace;
+  font-family: monospace;
   font-size: 90%;
   white-space: nowrap;
   background: #F1F1F1;
