--- a/prism.css
+++ b/prism.css
@@ -7,12 +7,13 @@
  * @author Lea Verou
  */
 
-code[class*="language-"],
+
 pre[class*="language-"] {
+  padding: 1rem;
   color: black;
   background: none;
-  text-shadow: 0 1px white;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-family: monospace;
+  font-size: 1.1em;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -55,14 +56,12 @@ code[class*="language-"] ::selection {
 /* Code blocks */
 
 pre[class*="language-"] {
-  padding: 1em;
-  margin: .5em 0;
   overflow: auto;
 }
 
 :not(pre)>code[class*="language-"],
 pre[class*="language-"] {
-  background: #f5f2f0;
+  /* background: #f5f2f0; */
 }
 
 
